--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/Ester800/cat-shelter#readme",
   "dependencies": {
+    "node": "^15.4.0",
     "nodemon": "^2.0.7"
   },
   "devDependencies": {},
