--- a/package.json
+++ b/package.json
@@ -1,25 +1,15 @@
 {
-  "name": "cat-shelter",
+  "name": "cat-shelter-main",
   "version": "1.0.0",
+  "description": "The Cat Shelter App.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Ester800/cat-shelter.git"
-  },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Ester800/cat-shelter/issues"
-  },
-  "homepage": "https://github.com/Ester800/cat-shelter#readme",
   "dependencies": {
-    "formidable": "^1.2.2",
-    "node": "^15.4.0",
-    "nodemon": "^2.0.7"
+    "formidable": "^1.2.2"
   },
-  "devDependencies": {},
-  "description": ""
+  "devDependencies": {}
 }
